[project]
name = "h12-safety-layer"
version = "0.0.0"
description = "Safety layer for h12 robot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pyyaml>=6.0.1",
    "scipy>=1.15.3",
    "unitree-sdk2py",
]

[tool.uv.workspace]
members = [
    "../../../unitree_sdk2_python",
]

[tool.uv.sources]
unitree-sdk2py = { workspace = true, editable = true }
